- Generic wxDataViewCtrl now always resizes its last column to fill all the
  available space, as the GTK+ version always did.

- wxGTK wxNotebook::AddPage() doesn't generate any events any more for the
  first page being added, for consistency with the other ports.

- wxGTK wxTextCtrl doesn't generate any wxEVT_TEXT when it's created with
  non-empty value, for consistency with the other ports.

- wxMSW wxToolBar height now adapts to the height of embedded controls, making
  the toolbar taller if necessary, rather than making the controls smaller. To
  return to the previous behaviour, you need to explicitly create controls of
  smaller size.

- wxDC::DrawCheckMark() draws the same shape under all platforms now, use the
  new wxRendererNative::DrawCheckMark() to draw MSW-specific themed check mark.

- wxTE_PROCESS_ENTER must be used to receive wxEVT_TEXT_ENTER events from even
  multiline wxTextCtrl, conforming to the documentation, but contrary to the
  previous behaviour in wxMSW, when these events were always generated in this
  case. Please add wxTE_PROCESS_ENTER style if you relied on the old behaviour.

- wxGLCanvas now uses physical pixels on high DPI displays under platforms
  where they're different from logical ones (wxGTK3, wxOSX). Multiply logical
  coordinates, e.g. returned by wxWindow::GetSize() by GetOpenGLScaleFactor()
  before using them with OpenGL functions.

- wxGTK now uses wxID_NONE item ID for wxEVT_MENU_HIGHLIGHT events sent when
  there is no highlighted menu item, instead of wxID_ANY used before, for
  consistency with wxMSW.

- wxListCtrl::GetItemState() in wxMSW now checks the passed in item index for
  validity, as the generic version under the other platforms already did.

- wxAuiNotebook::RemovePage() now hides the removed page, so it needs to be
  shown again if it is reused in another place.

- wxSizer::RecalcSizes() shouldn't be called directly (note that it was never